fix link endpoints
